# architecture-diagrams

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_PROJECTS.md  README_VIEW_SPECS.md  mypy.ini  notes.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
arch_diagrams/: __main__.py  archdiags.py
arch_diagrams/adapter/: pystructurizr_export.py
arch_diagrams/c4/: auto_two_phase.py  model.py  smart_view.py
arch_diagrams/cli/: dump.py  generate.py  list_modules.py  list_views.py  lite.py
architecture_diagrams/: archdiags.py
docs/: DESIGN_NOTES.md
projects/: __init__.py
projects/banking/: __init__.py  (+1 more)
tests/: conftest.py  test_auto_two_phase.py  test_build_workspace_validation.py  test_c4_model.py  test_c4_model_container_tags.py  test_c4_smart_view_regression.py  test_c4_workspace_builder.py  test_cli_generate_json_smoke.py  test_cli_generate_smoke.py  test_cli_generate_validation.py  test_container_map_spec.py  test_delta_view_kafka_redis.py  test_groups_and_getters.py  test_projects.py  test_pystructurizr_adapter.py  test_relationship_limits.py  test_replace_container_report.py  test_structural_parity.py  test_system_landscape_indexing_and_operators.py  test_tag_normalization_crosscutting.py  test_view_block_parity.py  test_view_block_parity_td.py  test_view_inheritance_override.py  test_view_inheritance_visibility.py  test_view_parity_selection.py  test_view_spec_container_fallback.py
(+59 files in other folders)
