[project]
name = "architecture-diagrams"
version = "0.1.0"
description = "C4-style architecture diagram builder and Structurizr DSL generator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Adrian M. Partl" }
]
keywords = ["c4", "structurizr", "architecture", "diagrams"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]
urls = { "Homepage" = "https://github.com/adrpar/arch-diagrams", "Issues" = "https://github.com/adrpar/arch-diagrams/issues" }
dependencies = [
    "click>=8.1.8",
    "pystructurizr>=0.1.3",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["architecture_diagrams"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
architecture-diagrams = "architecture_diagrams.archdiags:cli"
